adding exterior and interior images

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <button class="transition-transform duration-300 hover:scale-110">
               <img
                 src="./images/button-solid-black.avif"
-                alt="Solid black"
+                alt="Solid Black"
                 class="w-22"
               />
             </button>
